# polyfield-sdk

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: API_REFERENCE.md  PLUGIN_GUIDE.md  PLUGIN_GUIDE.zh-CN.md
examples/plugin-example/: Cargo.toml
examples/plugin-example/src/: lib.rs
src/: abi.rs  context.rs  events.rs  fields.rs  game_enums.rs  lib.rs  math.rs  player.rs  plugin.rs  vehicle.rs
