[package]
name = "polyfield"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Plugin SDK for the Polyfield anti-cheat framework"
repository = "https://github.com/TFireOps/polyfield-sdk"
readme = "README.md"

[lib]
name = "polyfield"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
